--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "private": true,
   "scripts": {
     "dev": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
     "build:web": "expo export --platform web",
     "lint": "expo lint"
   },
@@ -40,7 +43,8 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.19.13",
     "react-native-webview": "13.12.5",
-    "zustand": "^4.5.0"
+    "zustand": "^4.5.0",
+    "expo-sqlite": "~15.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
