sqlite - db read only added

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,20 +6,15 @@
     "moduleResolution": "node",
     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "./*"
-      ]
+      "@/*": ["./*"]
     },
-    "types": [
-      "expo-sqlite"
-    ]
+    "types": ["expo-sqlite"]
   },
   "include": [
     "**/*.ts",
     "**/*.tsx",
     ".expo/types/**/*.ts",
-    "expo-envCOLON.d.ts",
-    "nativewind-env.d.ts",
-    "expo-env.d.ts"
+    "expo-env.d.ts",
+    "nativewind-env.d.ts"
   ]
 }
