--- a/eas.json
+++ b/eas.json
@@ -25,7 +25,7 @@
     "production": {
       "distribution": "store",
       "android": {
-        "buildType": "aab"
+        "buildType": "app-bundle"
       },
       "ios": {}
     }
