--- a/package.json
+++ b/package.json
@@ -5,19 +5,20 @@
   "private": true,
   "scripts": {
     "dev": "expo start",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
     "web": "expo start --web",
     "build:web": "expo export --platform web",
     "lint": "expo lint"
   },
   "dependencies": {
+    "@expo/cli": "^0.24.13",
     "@expo/vector-icons": "^14.0.2",
     "@lucide/lab": "^0.1.2",
-    "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/bottom-tabs": "7.2.0",
     "@react-navigation/native": "^7.0.14",
     "axios": "^1.6.7",
-    "expo": "52.0.33",
+    "expo": "^52.0.33",
     "expo-blur": "^14.0.3",
     "expo-constants": "^17.0.5",
     "expo-font": "^13.0.3",
@@ -26,6 +27,7 @@
     "expo-linking": "^7.0.5",
     "expo-router": "4.0.17",
     "expo-splash-screen": "^0.29.21",
+    "expo-sqlite": "~15.1.4",
     "expo-status-bar": "^2.0.1",
     "expo-symbols": "^0.2.2",
     "expo-system-ui": "^4.0.7",
@@ -43,8 +45,7 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.19.13",
     "react-native-webview": "13.12.5",
-    "zustand": "^4.5.0",
-    "expo-sqlite": "~15.1.4"
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
