--- a/eas.json
+++ b/eas.json
@@ -3,39 +3,18 @@
     "version": ">= 7.11.0"
   },
   "build": {
-    "development": {
-      "developmentClient": true,
-      "distribution": "internal",
-      "android": {
-        "buildType": "apk"
-      },
-      "ios": {
-        "simulator": true
-      }
-    },
     "preview": {
-      "distribution": "internal",
       "android": {
         "buildType": "apk"
-      },
-      "ios": {
-        "simulator": false
       }
     },
     "production": {
-      "distribution": "store",
       "android": {
         "buildType": "app-bundle"
-      },
-      "ios": {}
+      }
     }
   },
   "submit": {
-    "production": {
-      "android": {
-        "track": "internal"
-      },
-      "ios": {}
-    }
+    "production": {}
   }
 }
