--- a/package.json
+++ b/package.json
@@ -12,43 +12,45 @@
     "lint": "expo lint"
   },
   "dependencies": {
-    "@expo/cli": "^0.24.13",
-    "@expo/vector-icons": "^14.0.2",
-    "@lucide/lab": "^0.1.2",
-    "@react-navigation/bottom-tabs": "7.2.0",
+    "@expo/cli": "0.18.29",
+    "@expo/config-plugins": "9.0.0",
+    "@expo/metro-config": "0.19.0",
+    "@expo/prebuild-config": "8.0.0",
+    "@expo/vector-icons": "14.0.2",
+    "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
-    "axios": "^1.6.7",
-    "expo": "^52.0.33",
-    "expo-blur": "^14.0.3",
-    "expo-constants": "^17.0.5",
-    "expo-font": "^13.0.3",
-    "expo-haptics": "^14.0.1",
-    "expo-linear-gradient": "^14.0.2",
-    "expo-linking": "^7.0.5",
-    "expo-router": "4.0.17",
-    "expo-splash-screen": "^0.29.21",
+    "axios": "1.6.7",
+    "expo": "~52.0.46",
+    "expo-blur": "~14.0.3",
+    "expo-constants": "~17.0.8",
+    "expo-font": "~13.0.4",
+    "expo-haptics": "~14.0.1",
+    "expo-linear-gradient": "~14.0.2",
+    "expo-linking": "~7.0.5",
+    "expo-router": "~4.0.21",
+    "expo-splash-screen": "~0.29.24",
     "expo-sqlite": "~15.1.4",
-    "expo-status-bar": "^2.0.1",
-    "expo-symbols": "^0.2.2",
-    "expo-system-ui": "^4.0.7",
-    "expo-web-browser": "^14.0.2",
-    "lucide-react-native": "^0.475.0",
-    "nativewind": "^4.0.1",
+    "expo-status-bar": "~2.0.1",
+    "expo-symbols": "~0.2.2",
+    "expo-system-ui": "~4.0.9",
+    "expo-web-browser": "~14.0.2",
+    "lucide-react-native": "0.475.0",
+    "nativewind": "4.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.6",
-    "react-native-gesture-handler": "^2.23.0",
-    "react-native-reanimated": "^3.16.7",
+    "react-native": "0.76.9",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "^4.4.0",
-    "react-native-svg": "^15.11.1",
-    "react-native-url-polyfill": "^2.0.0",
-    "react-native-web": "^0.19.13",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "15.8.0",
+    "react-native-url-polyfill": "2.0.0",
+    "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "zustand": "^4.5.0"
+    "zustand": "4.5.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
+    "@babel/core": "^7.24.0",
     "@types/react": "~18.3.12",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
