--- a/package.json
+++ b/package.json
@@ -13,46 +13,46 @@
   },
   "dependencies": {
     "@expo/cli": "0.18.29",
-    "@expo/config-plugins": "9.0.0",
-    "@expo/metro-config": "0.19.0",
-    "@expo/prebuild-config": "8.0.0",
-    "@expo/vector-icons": "14.0.2",
+    "@expo/config-plugins": "~10.0.0",
+    "@expo/metro-config": "~0.20.0",
+    "@expo/prebuild-config": "~9.0.0",
+    "@expo/vector-icons": "^14.1.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "axios": "1.6.7",
-    "expo": "~52.0.46",
-    "expo-blur": "~14.0.3",
-    "expo-constants": "~17.0.8",
-    "expo-font": "~13.0.4",
-    "expo-haptics": "~14.0.1",
-    "expo-linear-gradient": "~14.0.2",
-    "expo-linking": "~7.0.5",
-    "expo-router": "~4.0.21",
-    "expo-splash-screen": "~0.29.24",
-    "expo-sqlite": "~15.1.4",
-    "expo-status-bar": "~2.0.1",
-    "expo-symbols": "~0.2.2",
-    "expo-system-ui": "~4.0.9",
-    "expo-web-browser": "~14.0.2",
-    "lucide-react-native": "0.475.0",
+    "expo": "^53.0.11",
+    "expo-blur": "~14.1.5",
+    "expo-constants": "~17.1.6",
+    "expo-font": "~13.3.1",
+    "expo-haptics": "~14.1.4",
+    "expo-linear-gradient": "~14.1.5",
+    "expo-linking": "~7.1.5",
+    "expo-router": "~5.1.0",
+    "expo-splash-screen": "~0.30.9",
+    "expo-sqlite": "~15.2.12",
+    "expo-status-bar": "~2.2.3",
+    "expo-symbols": "~0.4.5",
+    "expo-system-ui": "~5.0.8",
+    "expo-web-browser": "~14.2.0",
     "nativewind": "4.0.1",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.9",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-svg": "15.8.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-icons": "^5.5.0",
+    "react-native": "0.79.4",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.11.2",
     "react-native-url-polyfill": "2.0.0",
-    "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
-    "zustand": "4.5.0"
+    "react-native-web": "^0.20.0",
+    "react-native-webview": "13.13.5",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.0",
-    "@types/react": "~18.3.12",
+    "@babel/core": "^7.26.0",
+    "@types/react": "~19.0.10",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3"
+    "typescript": "~5.8.3"
   }
 }
