--- a/package.json
+++ b/package.json
@@ -17,16 +17,21 @@
     "@expo/metro-config": "~0.20.0",
     "@expo/prebuild-config": "~9.0.0",
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/netinfo": "^11.4.1",
+    "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
-    "axios": "1.6.7",
+    "axios": "^1.6.7",
     "expo": "^53.0.11",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
+    "expo-image": "~2.3.0",
     "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.5",
+    "expo-location": "^18.1.6",
     "expo-router": "~5.1.0",
     "expo-splash-screen": "~0.30.9",
     "expo-sqlite": "~15.2.12",
@@ -43,11 +48,13 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-searchable-dropdown": "^1.1.3",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "15.11.2",
     "react-native-url-polyfill": "2.0.0",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
-    "zustand": "^5.0.5"
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
