--- a/eas.json
+++ b/eas.json
@@ -1,16 +1,19 @@
 {
   "cli": {
-    "version": ">= 7.11.0"
+    "version": ">= 5.0.0"
   },
   "build": {
-    "preview": {
+    "development": {
+      "developmentClient": true,
+      "distribution": "internal",
       "android": {
+        "gradleCommand": ":app:assembleDebug",
         "buildType": "apk"
       }
     },
     "production": {
       "android": {
-        "buildType": "app-bundle"
+        "buildType": "apk"
       }
     }
   },
