--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "private": true,
   "scripts": {
     "dev": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "build:web": "expo export --platform web",
     "lint": "expo lint"
@@ -31,13 +31,15 @@
     "expo-image": "~2.3.0",
     "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.7",
-    "expo-location": "^18.1.6",
+    "expo-location": "~18.1.6",
+    "expo-notifications": "~0.31.4",
     "expo-router": "~5.1.3",
     "expo-splash-screen": "~0.30.10",
     "expo-sqlite": "~15.2.14",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.10",
+    "expo-task-manager": "~13.1.6",
     "expo-web-browser": "~14.2.0",
     "nativewind": "4.0.1",
     "react": "19.0.0",
@@ -51,10 +53,12 @@
     "react-native-searchable-dropdown": "^1.1.3",
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "15.11.2",
+    "react-native-toast-message": "^2.3.3",
     "react-native-url-polyfill": "2.0.0",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
-    "zustand": "^5.0.6"
+    "zustand": "^5.0.6",
+    "expo-dev-client": "~5.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
