--- a/eas.json
+++ b/eas.json
@@ -11,6 +11,11 @@
         "buildType": "apk"
       }
     },
+    "preview": {
+      "android": {
+        "buildType": "apk"
+      }
+    },
     "production": {
       "android": {
         "buildType": "apk"
