--- a/app.json
+++ b/app.json
@@ -6,14 +6,18 @@
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "roadfuel",
-    "databases": ["truckersApp.db"],
+    "databases": [
+      "truckersApp.db"
+    ],
     "userInterfaceStyle": "automatic",
     "splash": {
       "image": "./assets/images/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.webfixerr.roadfuel",
@@ -22,7 +26,9 @@
         "CFBundleDisplayName": "RoadFuel",
         "NSLocationWhenInUseUsageDescription": "This app needs your location to track your journey.",
         "NSLocationAlwaysAndWhenInUseUsageDescription": "This app needs your location to track your journey in the background.",
-        "UIBackgroundModes": ["location"]
+        "UIBackgroundModes": [
+          "location"
+        ]
       }
     },
     "android": {
@@ -81,7 +87,8 @@
           "color": "#000000"
         }
       ],
-      "expo-task-manager"
+      "expo-task-manager",
+      "expo-localization"
     ],
     "experiments": {
       "typedRoutes": true
