--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "expo": "53.0.19",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
+    "expo-dev-client": "~5.2.4",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.3.0",
     "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.7",
+    "expo-localization": "~16.1.6",
     "expo-location": "~18.1.6",
     "expo-notifications": "~0.31.4",
     "expo-router": "~5.1.3",
@@ -41,9 +43,11 @@
     "expo-system-ui": "~5.0.10",
     "expo-task-manager": "~13.1.6",
     "expo-web-browser": "~14.2.0",
+    "i18next": "^25.3.4",
     "nativewind": "4.0.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-i18next": "^15.6.1",
     "react-icons": "^5.5.0",
     "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
@@ -57,8 +61,7 @@
     "react-native-url-polyfill": "2.0.0",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
-    "zustand": "^5.0.6",
-    "expo-dev-client": "~5.2.4"
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
