--- a/app.json
+++ b/app.json
@@ -6,18 +6,13 @@
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "roadfuel",
-    "databases": [
-      "truckersApp.db"
-    ],
     "userInterfaceStyle": "automatic",
     "splash": {
       "image": "./assets/images/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.webfixerr.roadfuel",
@@ -26,9 +21,7 @@
         "CFBundleDisplayName": "RoadFuel",
         "NSLocationWhenInUseUsageDescription": "This app needs your location to track your journey.",
         "NSLocationAlwaysAndWhenInUseUsageDescription": "This app needs your location to track your journey in the background.",
-        "UIBackgroundModes": [
-          "location"
-        ]
+        "UIBackgroundModes": ["location"]
       }
     },
     "android": {
@@ -47,19 +40,8 @@
         "ACCESS_BACKGROUND_LOCATION",
         "POST_NOTIFICATIONS",
         "FOREGROUND_SERVICE",
-        "FOREGROUND_SERVICE_LOCATION",
-        "android.permission.ACCESS_COARSE_LOCATION",
-        "android.permission.ACCESS_FINE_LOCATION",
-        "android.permission.ACCESS_BACKGROUND_LOCATION",
-        "android.permission.FOREGROUND_SERVICE",
-        "android.permission.FOREGROUND_SERVICE_LOCATION"
-      ],
-      "foregroundService": {
-        "useService": true,
-        "notificationTitle": "Tracking Your Location",
-        "notificationBody": "Location tracking is active for your journey.",
-        "notificationColor": "#000000"
-      }
+        "FOREGROUND_SERVICE_LOCATION"
+      ]
     },
     "web": {
       "bundler": "metro",
